@@ -3,9 +3,9 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-pidfile="/var/run/ovirt-engine.pid"
-command="/usr/share/ovirt-engine/services/ovirt-engine.py"
-command_args="--redirect-output ${OVIRT_ENGINE_EXTRA_ARGS} start"
+pidfile="/var/run/ovirt-websocket-proxy.pid"
+command="/usr/share/ovirt-engine/services/ovirt-websocket-proxy.py"
+command_args="${OVIRT_ENGINE_EXTRA_ARGS} start"
 command_background="yes"
 start_stop_daemon_args="--user ovirt:ovirt"
 
@@ -16,4 +16,5 @@ depend() {
 
 start_pre() {
 	ulimit -n ${NOFILE:-65535}
+	ulimit -n ${NPROC:-2048}
 }
